データの可視化と前処理

--- a/SF_movies_visualization_preprocessing.ipynb
+++ b/SF_movies_visualization_preprocessing.ipynb
@@ -6,7 +6,7 @@
       "name": "SF_movies_visualization_preprocessing.ipynb",
       "provenance": [],
       "mount_file_id": "1V1GL3CaMK58EwfRrpqzGcIzhCjSAXoPH",
-      "authorship_tag": "ABX9TyMeBsZb3gILFLYtniUCBrSC",
+      "authorship_tag": "ABX9TyOWVsdc31d3xx47sgEJhj1T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2877,6 +2877,17 @@
           "execution_count": 126
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1PVgR71JQjG9"
+      },
+      "source": [
+        "data[data[\"score\"] == 1.0]"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
